--- a/about.css
+++ b/about.css
@@ -1525,11 +1525,11 @@ text-align: center;
            footer{
             width: 100%;
             height:700px; 
-          margin-top:0%;
+         margin-top:-50%;
         }
         .up{
             width: 100%;
-            height: 650px;
+            height:650px;
         
         }
         .min-up{
@@ -1537,6 +1537,9 @@ text-align: center;
             height: 700px;
          flex-direction: column;
          justify-content: center;
+         padding-top: 80%;
+       
+         
         
         }
         #fl-ex{
