--- a/community.css
+++ b/community.css
@@ -908,20 +908,21 @@ text-align: center;
 
         footer{
             width: 100%;
-            height:700px;
+            height:550px;
         
           
         }
         .up{
             width: 100%;
-            height: 650px;
+            height:550px;
         
         }
         .min-up{
             width: 100%;
-            height: 700px;
+            height:550px;
          flex-direction: column;
          justify-content: center;
+         padding-top: 70%;
         
         }
         #fl-ex{
