--- a/contact.css
+++ b/contact.css
@@ -927,7 +927,7 @@ flex-direction: column;
  footer{
     width: 100%;
     height:700px;
-
+   margin-top:-40%;
   
 }
 .up{
@@ -940,7 +940,7 @@ flex-direction: column;
     height: 700px;
  flex-direction: column;
  justify-content: center;
-
+padding-top: 80%;
 }
 #fl-ex{
     width: 100%;
