--- a/privacy.css
+++ b/privacy.css
@@ -763,7 +763,7 @@ text-align: center;
           footer{
             width: 100%;
             height:700px;
-        
+        margin-top: -40%;
           
         }
         .up{
@@ -776,7 +776,7 @@ text-align: center;
             height: 700px;
          flex-direction: column;
          justify-content: center;
-        
+        padding-top: 80%;
         }
         #fl-ex{
             width: 100%;
