--- a/service.css
+++ b/service.css
@@ -2083,7 +2083,7 @@ text-align: center;
        footer{
         width: 100%;
         height:700px;
-       margin-top: -40%;
+       margin-top: -90%;
       
     }
     .up{
@@ -2096,6 +2096,7 @@ text-align: center;
         height: 700px;
      flex-direction: column;
      justify-content: center;
+     padding-top: 80%;
     
     }
     #fl-ex{
