--- a/style.css
+++ b/style.css
@@ -3040,18 +3040,18 @@ flex-direction: column;
 
 footer{
     width: 100%;
-    height:700px;
+    height:550px;
 
   
 }
 .up{
     width: 100%;
-    height: 650px;
+    height:550px;
 
 }
 .min-up{
     width: 100%;
-    height: 650px;
+    height:550px;
  flex-direction: column;
  justify-content: center;
 
@@ -4215,20 +4215,21 @@ flex-direction: column;
 
 footer{
     width: 100%;
-    height:700px;
+    height:500px;
 
   
 }
 .up{
     width: 100%;
-    height: 650px;
+    height: 500px;
 
 }
 .min-up{
     width: 100%;
-    height: 700px;
+    height: 400px;
  flex-direction: column;
  justify-content: center;
+ padding-top: 80%;
 
 }
 #fl-ex{
