--- a/terms.css
+++ b/terms.css
@@ -756,8 +756,7 @@ text-align: center;
            footer{
             width: 100%;
             height:700px;
-        
-          
+            margin-top: -40%;
         }
         .up{
             width: 100%;
@@ -769,6 +768,7 @@ text-align: center;
             height: 700px;
          flex-direction: column;
          justify-content: center;
+         padding-top: 80%;
         
         }
         #fl-ex{
